<resources>
    <string name="app_name">RefuApp</string>
    <string name="email">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="todavia_no_tengo_cuenta_quiero_registrarme">Todavía no tengo cuenta, quiero registrarme</string>
    <string name="escriba_de_nuevo_la_constrasenia">Escriba de nuevo la constraseña</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="soy_un_refugio">Soy un refugio</string>
    <string name="registrarme">Registrarme</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="title_profile">Profile</string>
    <string name="nombre">Nombre</string>
    <string name="biograf_a">Biografía</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="aceptar_cambios">Aceptar cambios</string>
    <string name="titulo">Titulo</string>
    <string name="publicar_post">Publicar post</string>
    <string name="agregar_imagen">Agregar imagen</string>
    <string name="cuerpo">Cuerpo</string>
    <string name="es_contenido_sensible">Es contenido sensible</string>
</resources>